# RNA-Project

./: pyproject.toml
Data/: .~lock.GSE1827_eset_clindata.csv#  .~lock.GSE89_eset_exprs.csv#  Counts_Annotated.csv  GSE1827_eset_clindata.csv  GSE19915.GPL3883_eset_clindata.csv  Output_counts.csv
Projects/: Dana_Adhoc.ipynb  First_Analysis.ipynb  util.py
Projects/Data/: Counts_Annotated.csv  pc_counts_5-20.csv
R-pre-processing/: Input_annotations.R  R-pre-processing.Rproj  curatedBladderData.R
